<!--
 * Created by Mickel Chowdhury,(DOB- 13-03-1992)
 * Agartala,Tripura,India,pin 799006
 * Contact - 9485117029
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arkipl.deyakagentbillinglite.ConsumerActivity">

    <item
        android:id="@+id/action_close"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_close"
        android:title="@string/billprint_menu_item_1"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_connect"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_btconnect"
        android:title="@string/billprint_menu_item_2"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_print"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_print"
        android:title="@string/billprint_menu_item_3"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/billprint_menu_item_4"
        app:showAsAction="always" />


</menu>
