<!--
 * Created by Mickel Chowdhury,(DOB- 13-03-1992)
 * Agartala,Tripura,India,pin 799006
 * Contact - 9485117029
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arkipl.deyakagentbillinglite.ConsumerActivity">

    <item
        android:id="@+id/action_close"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_close"
        android:title="@string/consumer_menu_item_1"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_search"
        android:title="@string/consumer_menu_item_2"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_dtr"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/consumer_menu_item_3"
        app:showAsAction="always" />

</menu>
