<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.nayandeeptamuli.apdclandroidbilling.OpenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_tag_1"
            android:textColor="@color/open_tag"
            android:gravity="center"
            android:layout_marginBottom="30dp"

            android:textSize="22dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo_deyakelectricity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_tag_2"
            android:textColor="@color/open_tag"
            android:gravity="center"
            android:textStyle="bold"

            android:textSize="48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_tag_3"
            android:textColor="@color/open_tag"
            android:gravity="center"
            android:textStyle="normal"

            android:textSize="42dp"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
