<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="30dip"
    android:orientation="vertical"
    android:background="@color/colorSecond"
    tools:context="com.nayandeeptamuli.apdclandroidbilling.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dip"
        android:gravity="top"
        android:orientation="horizontal"
        android:background="@color/list_background">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:src="@drawable/ic_consumer"
            android:background="@drawable/home_consumer_list_icon_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingLeft="3dip"
                android:textColor="@color/form_tag"
                android:textStyle="bold"
                android:text="@string/payment_text_search_tag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText android:id="@+id/payment_consumer_id_input"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:hint="@string/payment_text_search_hint"/>

                <ImageView android:id="@+id/payment_consumer_search_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_action_search_dark"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_consumer_scan"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="top"
        android:background="@color/list_background">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_action_qrc"
            android:background="@drawable/home_consumer_list_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dip"
            android:textSize="24dp"
            android:fontFamily="calibri"
            android:gravity="center_vertical"
            android:textColor="@color/list_text"
            android:text="@string/payment_text_search_scan"/>

    </LinearLayout>


    <ScrollView android:id="@+id/show_payment_details"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="20dip"
            android:paddingBottom="20dip"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dip"
                android:background="@drawable/bottom_border"
                android:text="@string/payment_text_search_caption"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:textStyle="bold"
                    android:text="@string/payment_text_search_tag_1"/>
                
                <TextView android:id="@+id/payment_principal"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:gravity="right"
                    android:text="Rs. 235.23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:textStyle="bold"
                    android:text="@string/payment_text_search_tag_2"/>

                <TextView android:id="@+id/payment_surcharge"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:gravity="right"
                    android:text="Rs. 235.23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:textStyle="bold"
                    android:text="@string/payment_text_search_tag_3"/>

                <TextView android:id="@+id/payment_credit"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:gravity="right"
                    android:text="Rs. 235.23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:textStyle="bold"
                    android:text="@string/payment_text_search_tag_total"/>

                <TextView android:id="@+id/payment_total"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="18dip"
                    android:gravity="right"
                    android:text="Rs. 235.23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dip"
                android:gravity="top"
                android:orientation="horizontal"
                android:background="@color/list_background">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_home_payment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dip"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:paddingLeft="3dip"
                        android:textStyle="bold"
                        android:textColor="@color/form_tag"
                        android:text="@string/payment_text_amount_tag" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText android:id="@+id/payment_amount_id_input"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:hint="@string/payment_text_search_hint"/>

                        <ImageView android:id="@+id/payment_consumer_done_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_action_ok_dark"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
