<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dbtransfer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nayandeeptamuli.apdclandroidbilling.DBTransferActivity">

    <LinearLayout
        android:id="@+id/dbtransfer_import"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/dbtransfer_list_backcolor">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_down"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="22dp"
            android:textColor="@color/dbtransfer_list_text"
            android:text="@string/dbtransfer_import_tag"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dbtransfer_export"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/dbtransfer_list_backcolor">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_up"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="22dp"
            android:textColor="@color/dbtransfer_list_text"
            android:text="@string/dbtransfer_export_tag" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/dbtransfer_download"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/dbtransfer_list_backcolor">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_action_down"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="22dp"
            android:textColor="@color/dbtransfer_list_text"
            android:text="@string/dbtransfer_down_tag"/>

    </LinearLayout>



</LinearLayout>
